# picalc_ip8725

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yaml
src/picalc_ip8725/: __init__.py
tests/: test_pi.py
